[project]
name = "docker-web-deploy"
version = "0.1.0"
description = "Deploy Docker based web apps in one command"
authors = [
    {"name" = "Maxime Bouroumeau-Fuseau", email = "maxime.bouroumeau@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
]

[project.urls]
Repository = "https://github.com/hyperflask/docker-web-deploy"

[project.entry-points."flask.commands"]
deploy = "docker_web_deploy.flask:deploy_command"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
